test/Fail/FunSort-SSet-X-PropOmega.err
FunSort-SSet-X-PropOmega.agda:6.13-18: error: [UnequalSorts]
Propω != funSort SSet _4
when checking that the expression A → B has type Propω
